--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
+    "deepmerge": "^4.2.2",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.0.10",
     "node-fetch": "^3.0.0"
   },
